gcc/testsuite/rust/rustc/ui/parser/pat-ranges-2.rs
// Parsing of range patterns

fn main() {
    let 10 ..= makropulos!() = 12; // { dg-error "" "" { target *-*-* } }
}

